<resources>
    <!--Android studio might warn you that these string are nog translated in English,
    but this is ignored because the default language of our app is English,
    so we don't need to provide a translation for English-->
    <string name="app_name" translatable="false">Spotty</string>
    <string name="title_activity_maps" translatable="false">Spotty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spot_fragment_text">Street: %1$s, %2$s. \nCity: %3$s, %4$s.\nOpening hours: %5$s</string>
    <string name="not_yet_implemented">Spotty is sad, this part is not yet implemented.\nIt is meant to be done in sprint 2.</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="probe">Probe</string>
    <string name="check_in">Check-in</string>
    <string name="retry">retry</string>
    <string name="exit">exit</string>
    <string name="unable_to_reach_servers">We couldn\'t reach our spotty servers, make sure you have internet!</string>
    <string name="error">Sadly</string>
    <string name="crowdedness_title">Crowdedness</string>
    <string name="click_on_the_graph_to_see_more_stats">Click on the graph to see more stats!</string>
    <string name="address">address</string>
    <string name="location_picture">location picture</string>
    <string name="time_format_hhmm" translatable="false">%1$02d:%2$02d</string>
    <string name="getting_ready">Getting ready</string>
    <string name="no_play_service">Google play services not found!</string>
    <string name="loading">loading</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="login_request">Already have an account? Login here!</string>
    <string name="login_empty_fields_error">Email-address and password may not be empty</string>
    <string name="login_email_formatting">Email-address should be a valid email</string>
    <string name="login_failed_error">Login failed: Invalid email-address or password</string>
    <string name="register">Register</string>
    <string name="register_empty_fields_error">No fields may be left empty</string>
    <string name="register_passwords_differ_error">Password and password confirmation do not match</string>
    <string name="register_invalid_email_error">Please enter a valid email-address</string>
    <string name="register_failed_error">An unknown error occurred when registering</string>
    <string name="register_request">No account yet? Register now!</string>
    <string name="email">email-address</string>
    <string name="home">Home</string>
    <string name="cancel">Cancel</string>
    <string name="location_check_in">Are you sure you want to check in?</string>
    <string name="settings_show_animations">Show small animations?</string>
    <string name="settings">Settings</string>
    <string name="sync_settings_with_spotty_servers">Sync settings with spotty servers</string>
    <string name="CheckOut">Check Out</string>
    <string name="check_out_are_yuo_sure">Are you sure you want to check out?</string>
    <string name="password_confirmation">password confirmation</string>
    <string name="error_register">Error registering</string>
    <string name="password_length_error">Password must be atleast 8 characters</string>
    <string name="error_login">Error logging in</string>
    <string name="refresh">refresh</string>
    <string name="password_needs_capital">Password must contain a capital letter.</string>
    <string name="password_needs_number">Password must contain a number.</string>
    <string name="locations">Search locations</string>
    <string name="approve">Approve</string>
    <string name="reuest_friend">Send request</string>
    <string name="friends_at_this_location">Friends at this location</string>
    <string name="no_friends_found">No friends found</string>
    <string name="drawer_indicator" translatable="false">drawer indicator</string>
    <string name="move_to_curr_loc">Moving to your current location</string>
    <string name="save_password_locally">Do you want to save the password locally?(You will need to log in again to apply this.)</string>
    <string name="unknown_opening_hours">unknown opening hours</string>
    <string name="no_location_found">No location found</string>

    <plurals name="graph_string">
        <item quantity="one">There is approximately 1 person in this location.</item>
        <item quantity="other">There are approximately %1$d people in this location.</item>
    </plurals>
    <plurals name="graph_string_extended">
        <item quantity="one">There is approximately 1 person in this location at %2$s.</item>
        <item quantity="other">There are approximately %1$d people in this location at %2$s.</item>
    </plurals>
</resources>
