<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="handler"
            type="com.example.spotty.fragments.SpotFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/location_picture"
                    android:src="@drawable/loading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/locationText"
                        android:layout_width="0dp"
                        android:layout_height="46dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="2"
                        android:fontFamily="@font/lato"
                        android:text=""
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView"
                        tools:text="@tools:sample/cities" />

                    <Button
                        android:id="@+id/checkin_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="1"
                        android:text="@string/check_in"
                        android:textColor="@color/spotty_text_color" />

                    <Button
                        android:id="@+id/refresh_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="1"
                        android:text="@string/refresh"
                        android:textColor="@color/spotty_text_color" />
                </LinearLayout>

                <TextView
                    android:id="@+id/adressText"
                    android:layout_width="346dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/locationText" />


                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="24dp"
                    android:alpha="0"
                    android:spinnerMode="dialog"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/adressText" />

                <TextView
                    android:id="@+id/peopleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:alpha="0"
                    android:fontFamily="@font/lato"
                    android:text="@string/click_on_the_graph_to_see_more_stats" />

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/graph"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="50dp"
                    android:alpha="0"
                    android:paddingBottom="50dp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinner" />

                <TextView
                    android:id="@+id/friends_at_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/friends_at_this_location" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/empty_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/no_friends_found"
                    android:visibility="gone" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>